# b-tree

./: .gitignore  Makefile  b-tree.cabal  test.hs
benchmarks/: BenchmarkSuite.hs
benchmarks/Data/BTree/: Benchmarks.hs
src/Data/: BTree.hs
src/Data/BTree/: Array.hs  Internal.hs  NodeSearch.hs  Vector.hs
src/Data/BTree/Array/: BinarySearch.hs  Search.hs  Util.hs
tests/: TestSuite.hs
tests/Data/BTree/: Invariants.hs  QuickCheck.hs  Tests.hs
tests/Data/BTree/Array/BinarySearch/: Tests.hs
tests/Data/BTree/Array/Search/: Tests.hs
tests/Data/BTree/Array/Util/: Tests.hs
tests/Data/BTree/NodeSearch/: Tests.hs
tests/Data/BTree/Vector/: Tests.hs
